--- a/scrolls/Bukkit/server.properties
+++ b/scrolls/Bukkit/server.properties
@@ -3,7 +3,7 @@
 generator-settings=
 allow-nether=true
 level-name=world
-enable-query=false
+enable-query=true
 allow-flight=false
 server-port=25565
 level-type=DEFAULT
