--- a/scrolls/Spigot/server.properties
+++ b/scrolls/Spigot/server.properties
@@ -25,4 +25,4 @@ max-players=20
 spawn-monsters=true
 generate-structures=true
 view-distance=10
-motd=A Minecraft Server
+motd=Un serveur EdenServers
