--- a/scrolls/Bukkit/server.properties
+++ b/scrolls/Bukkit/server.properties
@@ -5,7 +5,7 @@ allow-nether=true
 level-name=world
 enable-query=true
 allow-flight=false
-server-port=25565
+server-port=<!port>
 level-type=DEFAULT
 enable-rcon=false
 level-seed=
@@ -25,4 +25,4 @@ max-players=20
 spawn-monsters=true
 generate-structures=true
 view-distance=10
-motd=A Minecraft Server
+motd=<!motd>
